--- a/m1/u2/a10/brendadosanjos/@content/assets/css/style.css
+++ b/m1/u2/a10/brendadosanjos/@content/assets/css/style.css
@@ -46,17 +46,21 @@
     display: flex;
     flex-direction: column;
     gap: 3rem;
-    padding: 20px 4rem;
+    /* padding: 20px 4rem; */
     border-bottom: 1px solid var(--quaternary-color);
+    
 }
 
-.header__container {
+ .header__container {
     max-width: 1400px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
-}
+    margin-left: 223px;
+} 
+
+
 
 .header__logo {
     display: flex;
@@ -67,7 +71,7 @@
 
 .header__logo > h1 {
     font-weight: 600;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .header__form {
